src/styles/prose.css
.prose {
  color: var(--fg);
  max-width: 70ch;
  font-size: 1rem;
  line-height: 1.75;

  [class~='lead'] {
    color: #4b5563;
    font-size: 1.25em;
    line-height: 1.6;
    margin-top: 1.2em;
    margin-bottom: 1.2em;
  }

  a {
    text-decoration: none;
    font-weight: 500;

    code {
      color: #111827;
    }
  }

  strong {
    color: var(--fg-deep);
    font-weight: 600;
  }

  b {
    color: var(--fg-deep);
  }

  em {
    color: inherit;
  }

  /* Ordered list types */
  ol {
    &[type='A'] {
      --list-counter-style: upper-alpha;
    }

    &[type='a'] {
      --list-counter-style: lower-alpha;
    }

    &[type='A s'] {
      --list-counter-style: upper-alpha;
    }

    &[type='a s'] {
      --list-counter-style: lower-alpha;
    }

    &[type='I'] {
      --list-counter-style: upper-roman;
    }

    &[type='i'] {
      --list-counter-style: lower-roman;
    }

    &[type='I s'] {
      --list-counter-style: upper-roman;
    }

    &[type='i s'] {
      --list-counter-style: lower-roman;
    }

    &[type='1'] {
      --list-counter-style: decimal;
    }

    > li {
      position: relative;
      padding-left: 1.75em;

      &::before {
        content: counter(list-item, var(--list-counter-style, decimal)) '.';
        position: absolute;
        font-weight: 400;
        color: #6b7280;
        left: 0;
      }
    }
  }

  ul > li {
    position: relative;
    padding-left: 1.75em;

    &::before {
      content: '';
      position: absolute;
      background-color: #d1d5db;
      border-radius: 50%;
      width: 0.375em;
      height: 0.375em;
      top: calc(0.875em - 0.1875em);
      left: 0.25em;
    }
  }

  hr {
    border-color: rgba(125, 125, 125, 0.3);
    margin-top: 3em;
    margin-bottom: 3em;
  }

  blockquote {
    font-weight: 500;
    font-style: italic;
    color: inherit;
    border-left-width: 0.25rem;
    border-color: rgba(125, 125, 125, 0.3);
    quotes: '\201C' '\201D' '\2018' '\2019';
    margin-top: 1.6em;
    margin-bottom: 1.6em;
    padding-left: 1em;

    p:first-of-type::before {
      content: open-quote;
    }

    p:last-of-type::after {
      content: close-quote;
    }
  }

  h1 {
    color: var(--fg-deeper);
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
  }

  h2 {
    color: var(--fg-deep);
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;

    code {
      font-size: 0.875em;
    }
  }

  h3 {
    color: inherit;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
    opacity: 0.7;

    code {
      font-size: 0.9em;
    }
  }

  h4 {
    color: inherit;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
  }

  h6 {
    text-transform: uppercase;
    margin-top: 20px;
    margin-bottom: 10px;
    opacity: 0.5;
    font-weight: 500;
    letter-spacing: 2px;
  }

  figure {
    figcaption {
      color: #6b7280;
      font-size: 0.875em;
      line-height: 1.4285714;
      margin-top: 0.8571429em;
    }
  }

  code {
    color: var(--fg-deep);
    font-weight: 600;
    font-size: 0.875em;
    font-family: var(--fonts-mono);

    &::before {
      content: '`';
    }

    &::after {
      content: '`';
    }
  }

  pre {
    scrollbar-width: none;
    font-size: 0.875em;
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
    border-radius: 0.375rem;
    padding: 0.8571429em 1.1428571em;

    &:has(code[class*='language-javascript']) {
      background-color: black;
      padding: 0;
    }

    .dark {
      color: #e5e7eb;
    }

    code {
      font-weight: 300;
      color: inherit;
      font-size: inherit;
      line-height: inherit;
      width: 100%;

      &::before {
        content: unset;
      }

      &::after {
        content: unset;
      }

      &[class*='language-javascript'] {
        overflow: auto;
        scrollbar-width: none;
        &::scroll-marker {
          display: none;
        }
      }
    }
    .line {
      overflow-wrap: anywhere;
      display: inline-block;
      padding-left: 4ch;
      text-indent: -4ch;
      /* strings / text in quotes have this style */
      @media (min-width: 768px) {
        span:not([style*='--s-dark: #C98A7D; --s-light: #B56959;']) {
          white-space: nowrap;
        }
      }
    }
  }

  .table-wrapper {
    overflow-x: auto;
    overflow-y: visible;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    margin-top: 2em;
    margin-bottom: 2em;
    &::-webkit-scrollbar {
      display: none;
    }
  }

  table {
    width: 100%;
    table-layout: auto;
    text-align: left;
    margin-top: 0;
    margin-bottom: 0;
    font-size: 0.875em;
    line-height: 1.7142857;

    thead {
      color: var(--fg-deep);
      font-weight: 600;
      border-bottom-width: 1px;
      border-bottom-color: #d1d5db;

      th {
        vertical-align: bottom;
        padding-right: 0.5714286em;
        padding-bottom: 0.5714286em;
        padding-left: 0.5714286em;

        &:first-child {
          padding-left: 0;
        }

        &:last-child {
          padding-right: 0;
        }
      }
    }

    tbody {
      tr {
        border-bottom-width: 1px;
        border-bottom-color: #e5e7eb;

        &:last-child {
          border-bottom-width: 0;
        }
      }

      td {
        vertical-align: top;
        padding-top: 0.5714286em;
        padding-right: 0.5714286em;
        padding-bottom: 0.5714286em;
        padding-left: 0.5714286em;

        &:first-child {
          padding-left: 0;
        }

        &:last-child {
          padding-right: 0;
        }
      }
    }
  }

  p {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
  }

  img {
    margin-top: 2em;
    margin-bottom: 2em;
  }

  video {
    margin-top: 2em;
    margin-bottom: 2em;
  }

  figure {
    margin-top: 2em;
    margin-bottom: 2em;

    > * {
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  ol {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    list-style-type: none;
  }

  ul {
    margin-top: 1.25em;
    margin-bottom: 1.25em;
    list-style-type: none;
  }

  li {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
  }

  > ul > li p {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }

  > ol > li > *:first-child {
    margin-top: 1.25em;
  }

  > ol > li > *:last-child {
    margin-bottom: 1.25em;
  }

  ul ul,
  ul ol,
  ol ul,
  ol ol {
    margin-top: 0.75em;
    margin-bottom: 0.75em;
  }

  hr + * {
    margin-top: 0;
  }

  h2 + * {
    margin-top: 0;
  }
  > h3 + * {
    margin-top: 0;
  }

  h4 + * {
    margin-top: 0;
  }

  > :first-child {
    margin-top: 0;
  }

  > :last-child {
    margin-bottom: 0;
  }
}

.prose-sm {
  font-size: 0.875rem;
  line-height: 1.7142857;

  p {
    margin-top: 1.1428571em;
    margin-bottom: 1.1428571em;
  }

  [class~='lead'] {
    font-size: 1.2857143em;
    line-height: 1.5555556;
    margin-top: 0.8888889em;
    margin-bottom: 0.8888889em;
  }

  blockquote {
    margin-top: 1.3333333em;
    margin-bottom: 1.3333333em;
    padding-left: 1.1111111em;
  }

  h1 {
    font-size: 2.1428571em;
    margin-top: 0;
    margin-bottom: 0.8em;
    line-height: 1.2;
  }

  h2 {
    font-size: 1.4285714em;
    margin-top: 1.6em;
    margin-bottom: 0.8em;
    line-height: 1.4;

    code {
      font-size: 0.9em;
    }
  }

  h3 {
    font-size: 1.2857143em;
    margin-top: 1.5555556em;
    margin-bottom: 0.4444444em;
    line-height: 1.5555556;

    code {
      font-size: 0.8888889em;
    }
  }

  h4 {
    margin-top: 1.4285714em;
    margin-bottom: 0.5714286em;
    line-height: 1.4285714;
  }

  img {
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
  }

  video {
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;
  }

  figure {
    margin-top: 1.7142857em;
    margin-bottom: 1.7142857em;

    > * {
      margin-top: 0;
      margin-bottom: 0;
    }

    figcaption {
      font-size: 0.8571429em;
      line-height: 1.3333333;
      margin-top: 0.6666667em;
    }
  }

  code {
    font-size: 0.8571429em;
  }

  pre {
    font-size: 0.8571429em;
    line-height: 1.6666667;
    margin-top: 1.6666667em;
    margin-bottom: 1.6666667em;
    border-radius: 0.25rem;
    padding-top: 0.6666667em;
    padding-right: 1em;
    padding-bottom: 0.6666667em;
    padding-left: 1em;
  }

  ol {
    margin-top: 1.1428571em;
    margin-bottom: 1.1428571em;

    > li {
      padding-left: 1.5714286em;

      &::before {
        left: 0;
      }
    }
  }

  ul {
    margin-top: 1.1428571em;
    margin-bottom: 1.1428571em;

    > li {
      padding-left: 1.5714286em;

      &::before {
        height: 0.3571429em;
        width: 0.3571429em;
        top: calc(0.8571429em - 0.1785714em);
        left: 0.2142857em;
      }
    }
  }

  li {
    margin-top: 0.2857143em;
    margin-bottom: 0.2857143em;
  }

  > ul > li p {
    margin-top: 0.5714286em;
    margin-bottom: 0.5714286em;
  }

  > ul > li > *:first-child {
    margin-top: 1.1428571em;
  }

  > ul > li > *:last-child {
    margin-bottom: 1.1428571em;
  }

  > ol > li > *:first-child {
    margin-top: 1.1428571em;
  }

  > ol > li > *:last-child {
    margin-bottom: 1.1428571em;
  }

  ul ul,
  ul ol,
  ol ul,
  ol ol {
    margin-top: 0.5714286em;
    margin-bottom: 0.5714286em;
  }

  hr {
    margin-top: 2.8571429em;
    margin-bottom: 2.8571429em;
  }

  hr + * {
    margin-top: 0;
  }

  h2 + * {
    margin-top: 0;
  }

  h3 + * {
    margin-top: 0;
  }

  h4 + * {
    margin-top: 0;
  }

  table {
    font-size: 0.8571429em;
    line-height: 1.5;

    thead th {
      padding-right: 1em;
      padding-bottom: 0.6666667em;
      padding-left: 1em;

      &:first-child {
        padding-left: 0;
      }

      &:last-child {
        padding-right: 0;
      }
    }

    tbody td {
      padding-top: 0.6666667em;
      padding-right: 1em;
      padding-bottom: 0.6666667em;
      padding-left: 1em;

      &:first-child {
        padding-left: 0;
      }

      &:last-child {
        padding-right: 0;
      }
    }
  }

  > :first-child {
    margin-top: 0;
  }

  > :last-child {
    margin-bottom: 0;
  }
}

